# todolistAPP

.ai/: README.md  architecture.md  constants.md  data-models.md  features.md  file-structure.md  project-overview.md  responsive-breakpoint-work.md  tablet-split-view-work.md  task-division.md  tech-stack.md  test-cases.md  ui-components.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: haptest-report.md  technical-chapter.md  实验报告.md
entry/: README.md  build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  crypto_utils.cpp  napi_init.cpp  text_analyzer.cpp
entry/src/main/ets/common/: Constants.ets  CountryCanada.ets  CountryUkraine.ets  CountryUnitedKingdom.ets  CountryUnitedStates.ets  Custom_Search.ets  ModeDark.ets  ModeDark0.ets  ModeDark1.ets  ModeDark10.ets  ModeDark11.ets  ModeDark12.ets  ModeDark13.ets  ModeDark2.ets  ModeDark3.ets  ModeDark4.ets  ModeDark5.ets  ModeDark6.ets  ModeDark7.ets  ModeDark8.ets  ModeDark9.ets  ModeDarkDoneOff.ets  ModeDarkDoneOn.ets  ModeDarkNameArchie.ets  ModeDarkNameArlea.ets  ModeDarkNameHawkins.ets  ModeDarkNameHoward.ets  ModeDarkNameJenny.ets  ModeDarkNameRalph.ets  ModeDarkNameRobert.ets  ModeDarkPositioningLeft.ets  ModeDarkPositioningRight.ets  ModeDarkSelectedOff.ets  ModeDarkSelectedOn.ets  ModeDarkStateMessage.ets  ModeDarkStateOff.ets  ModeDarkStateOn.ets  ModeDarkStateTyping.ets  ModeDarkStateYourReply.ets  ModeDarkTypeButton.ets  (+54 more)
entry/src/main/ets/components/: CommonEmptyView.ets  NoteCard.ets  TagChip.ets  TodoStatusSwitch.ets
(+30 files in other folders)
